adapted for less memory use, added spreadsheet instructions

--- a/lab.ipynb
+++ b/lab.ipynb
@@ -28,7 +28,7 @@
     "## Tarefas\n",
     "### Tarefa 1\n",
     "- Cada uma das equipes receberá 2 queries fixas, chamadas de QF1 e QF2, e a tarefa do grupo será a criação de mais 2 queries, chamadas de QP1 e QP2. As queries devem seguir o formato de uma pergunta ou declaração textual e ela será usada na próxima tarefa para realizar buscas. As equipes podem se inspirar nas notícias fornecidas (presentes no csv da tarefa 2) para montá-las. Cada query deve ser composta por até 100 caracteres.\n",
-    "- A equipe deve enviar suas QP1 e QP2 em um formulário que será disponibilizado no classroom e no discord.\n",
+    "- A equipe deve enviar suas QP1 e QP2 via o [formulário](https://forms.gle/b3AcG79oCRhw65CH7)\n",
     "\n",
     "### Tarefa 2\n",
     "- Após a criação das QP1 e QP2, cada equipe possuirá 4 queries (QF1; QF2; QP1 e QP2).\n",
@@ -36,20 +36,22 @@
     "- As buscas léxica e semântica já estão implementadas, os grupos devem gerar a implementação das buscas híbridas e da busca criativa.\n",
     "- A busca criativa será a busca usada para a competição!\n",
     "- Cada grupo durante a implementação de suas buscas deve testar diferentes pré-processamentos nos dados para verificar como os resultados podem melhorar. Alguns pré-processamentos já foram implementados, mas os grupos não precisam se limitar aos pré-processamentos apresentados. Vocês podem buscar na internet implementações de outros pré-processamentos, criar padrões regex, etc. Observe que os dados precisarão ser reindexados no ElasticSearch sempre que os pré-processamentos forem modificados (inseridos, removidos ou mudados de ordem)!\n",
+    "\n",
     "- Enquanto vocês testam seus pré-processamentos e algoritmos de busca, ao analisar os resultados obtidos para uma determinada query, anotem o nível de relevância de cada documento lido em relação à query. Observe que esse procedimento pode ser realizado continuamente durante o processo de implementação, pois a relevância de um documento para uma query independe de implementação de buscadores. Essa anotação deve ser realizada (online) em uma planilha no google drive, que será fornecida pela organização do Lab. Caso mais de um integrante do grupo anote valores diferentes na planilha, não tem problemas. Nesse caso, iremos considerar a média dos valores.\n",
-    "    - A planilha tem o seguinte formato:\n",
+    "*ATENÇÃO! Para facilitar a avaliação de seu desempenho enquanto desenvolvem e a geração das anotações no formato correto, disponibilizamos esse [template](https://docs.google.com/spreadsheets/d/1fF0fuLgbIQu_5plOnI54iYwqywZuXKLYRUDeKaDCgKI/edit?usp=sharing) que inclui importação, avaliação, recuperação de gabarito e exportação. Crie uma cópia do template para usá-lo. Não é obrigatório usar o template.*\n",
+    "    - A planilha que o time vai devolver tem o seguinte formato:\n",
     "        - doc_id, query_id, relevance\n",
     "        - 120, QP1, 2\n",
     "        - 487, QP1, 1\n",
     "        - ...\n",
     "    - Cada busca deve possuir pelo menos 10 resultados anotados.\n",
     "    - Não modifique o código que realiza o carregamento dos dados para que o doc_id seja consistente com os demais grupos!\n",
-    "    - A rotulação deve possui uma gradação em 3 níveis:\n",
+    "    - A rotulação deve possuir uma gradação em 3 níveis:\n",
     "        - 0: Não é Relevante\n",
     "        - 1: Pouco Relevante\n",
     "        - 2: Muito Relevante \n",
     "- A entrega desta tarefa será feita através de um formulário para entregar um .zip contendo todo o repositório e o código utilizado autocontido (com listagem das dependências utilizadas no requirements.txt se necessário) e suas buscas implementadas. Este código será reexecutado, então organize o código para que ele possa ser reexecutado em outra máquina.\n",
-    "- Quando esgotar o prazo de envio da tarefa a planilha será bloqueada para modificações.\n",
+    "- Quando esgotar o prazo de envio da tarefa o formulário será.\n",
     "- A partir deste momento, nenhum grupo poderá alterar suas buscas novamente, então tenham ciência que esta será sua implementação final que será usada para a competição.\n",
     "\n",
     "### Tarefa 3\n",
@@ -97,6 +99,24 @@
    "source": [
     "\n",
     "## Passos de preparação do ambiente"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(bash) Para instalar os requirements em um venv, execute os comandos abaixo a partir do diretório desse repositório\n",
+    "\n",
+    "```\n",
+    "python3.12 -m venv elastic-lab\n",
+    "source elastic-lab/bin/activate\n",
+    "pip install -r requirements.txt\n",
+    "```\n",
+    "\n",
+    "Para desativar o venv quando tiver terminado\n",
+    "```\n",
+    "deactivate\n",
+    "```"
    ]
   },
   {
@@ -208,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +322,9 @@
     "    df = pd.read_csv(output_file, sep=\";\")[[\"Título\", \"Texto\", \"Data de Publicação\"]]\n",
     "    df[\"Data de Publicação\"] = df[\"Data de Publicação\"].apply(lambda str_date: datetime.strptime(str_date.split(\" - \")[0], \"%d.%m.%Y\"))\n",
     "    df.sort_values(\"Data de Publicação\", inplace=True, ascending=False)\n",
+    "\n",
+    "    df = df.sample(frac=0.5, random_state=42).reset_index(drop=True)\n",
+    "\n",
     "    df[\"Embeddings\"] = [None] * len(df)\n",
     "    df[\"doc_id\"] = df.reset_index(drop=True).index\n",
     "\n",
@@ -336,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,8 +450,8 @@
     "    QF2 = queries_fixadas[1]\n",
     "    \n",
     "# Preencha aqui as queries do grupo\n",
-    "QP1 = XXXXXXXXX\n",
-    "QP2 = XXXXXXXXX\n",
+    "QP1 = \"XXXXXXXX\"\n",
+    "QP2 = \"XXXXXXXX\"\n",
     "\n",
     "queries = OrderedDict()\n",
     "queries[\"QF1\"] = QF1\n",
@@ -446,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,15 +599,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "search_functions = [\n",
     "    (\"lexical\", lexical_search),\n",
     "    (\"semantic\", semantic_search),\n",
-    "    (\"hybrid\", hybrid_search),\n",
-    "    (\"creative\", creative_search)\n",
+    "    # (\"hybrid\", hybrid_search),\n",
+    "    # (\"creative\", creative_search)\n",
     "]\n",
     "\n",
     "def run_all_searches(queries: dict[str, str]):\n",
@@ -649,6 +672,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_id_map(all_docs_df, output_csv_path):\n",
+    "    \"\"\"\n",
+    "    Exports a stable mapping of ALL documents used in Elasticsearch.\n",
+    "\n",
+    "    The doc_id values will exactly match those returned by search results.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    required_cols = {\"doc_id\", \"Título\", \"Texto processado\"}\n",
+    "    missing = required_cols - set(all_docs_df.columns)\n",
+    "    if missing:\n",
+    "        raise ValueError(f\"Missing required columns: {missing}\")\n",
+    "\n",
+    "    id_map_df = (\n",
+    "        all_docs_df[[\"doc_id\", \"Título\", \"Texto processado\"]]\n",
+    "        .rename(columns={\n",
+    "            \"Título\": \"title\",\n",
+    "            \"Texto processado\": \"content\"\n",
+    "        })\n",
+    "        .sort_values(\"doc_id\")   # optional, but good for reproducibility\n",
+    "        .reset_index(drop=True)\n",
+    "    )\n",
+    "\n",
+    "    id_map_df.to_csv(output_csv_path, sep=\";\", index=False)\n",
+    "\n",
+    "    return id_map_df\n",
+    "\n",
+    "generate_id_map(df, \"data/id_map.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -669,9 +727,9 @@
    "outputs": [],
    "source": [
     "# Preencha aqui com as queries adicionais do seu grupo\n",
-    "QA1 = XXXXXXXXX\n",
-    "QA2 = XXXXXXXXX\n",
-    "QA3 = XXXXXXXXX\n",
+    "QA1 = \"XXXXXXXX\"\n",
+    "QA2 = 'XXXXXXXX'\n",
+    "QA3 = \"XXXXXXXX\"\n",
     "\n",
     "queries = OrderedDict()\n",
     "queries[\"QF1\"] = QF1\n",
@@ -725,7 +783,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "analyze-pdf-test",
+   "display_name": "elastic-lab",
    "language": "python",
    "name": "python3"
   },
