readme: added form links

--- a/lab.ipynb
+++ b/lab.ipynb
@@ -37,7 +37,7 @@
     "- A busca criativa será a busca usada para a competição!\n",
     "- Cada grupo durante a implementação de suas buscas deve testar diferentes pré-processamentos nos dados para verificar como os resultados podem melhorar. Alguns pré-processamentos já foram implementados, mas os grupos não precisam se limitar aos pré-processamentos apresentados. Vocês podem buscar na internet implementações de outros pré-processamentos, criar padrões regex, etc. Observe que os dados precisarão ser reindexados no ElasticSearch sempre que os pré-processamentos forem modificados (inseridos, removidos ou mudados de ordem)!\n",
     "\n",
-    "- Enquanto vocês testam seus pré-processamentos e algoritmos de busca, ao analisar os resultados obtidos para uma determinada query, anotem o nível de relevância de cada documento lido em relação à query. Observe que esse procedimento pode ser realizado continuamente durante o processo de implementação, pois a relevância de um documento para uma query independe de implementação de buscadores. Essa anotação deve ser realizada (online) em uma planilha no google drive, que será fornecida pela organização do Lab. Caso mais de um integrante do grupo anote valores diferentes na planilha, não tem problemas. Nesse caso, iremos considerar a média dos valores.\n",
+    "- Enquanto vocês testam seus pré-processamentos e algoritmos de busca, ao analisar os resultados obtidos para uma determinada query, anotem o nível de relevância de cada documento lido em relação à query. Observe que esse procedimento pode ser realizado continuamente durante o processo de implementação, pois a relevância de um documento para uma query independe de implementação de buscadores. Essa anotação deve ser realizada (online) em formato csv via [formulário](https://forms.gle/ipKHwaPQbkrYrFhZA), que será fornecido pela organização do Lab. No caso dos integrantes discordarem sobre a avaliação considerem a média dos valores.\n",
     "*ATENÇÃO! Para facilitar a avaliação de seu desempenho enquanto desenvolvem e a geração das anotações no formato correto, disponibilizamos esse [template](https://docs.google.com/spreadsheets/d/1fF0fuLgbIQu_5plOnI54iYwqywZuXKLYRUDeKaDCgKI/edit?usp=sharing) que inclui importação, avaliação, recuperação de gabarito e exportação. Crie uma cópia do template para usá-lo. Não é obrigatório usar o template.*\n",
     "    - A planilha que o time vai devolver tem o seguinte formato:\n",
     "        - doc_id, query_id, relevance\n",
@@ -51,11 +51,10 @@
     "        - 1: Pouco Relevante\n",
     "        - 2: Muito Relevante \n",
     "- A entrega desta tarefa será feita através de um formulário para entregar um .zip contendo todo o repositório e o código utilizado autocontido (com listagem das dependências utilizadas no requirements.txt se necessário) e suas buscas implementadas. Este código será reexecutado, então organize o código para que ele possa ser reexecutado em outra máquina.\n",
-    "- Quando esgotar o prazo de envio da tarefa o formulário será.\n",
     "- A partir deste momento, nenhum grupo poderá alterar suas buscas novamente, então tenham ciência que esta será sua implementação final que será usada para a competição.\n",
     "\n",
     "### Tarefa 3\n",
-    "- O grupo receberá (pelo discord) 3 queries adicionais (QA1; QA2 e QA3).\n",
+    "- O grupo receberá (pelo slack) 3 queries adicionais (QA1; QA2 e QA3).\n",
     "- A tarefa do grupo será a execução do MESMO CÓDIGO submetido na tarefa anterior com estas 3 queries e a anotação dos dados (a planilha de anotações será disponibilizada pelo discord).\n",
     "- Nesta etapa, o grupo NÃO PODE FAZER ALTERAÇÕES nos pré-processamentos definidos ou nas implementações de suas buscas.\n",
     "- Quando esgotar o prazo de envio da tarefa a planilha será bloqueada para modificações.\n",
