--- a/lab.ipynb
+++ b/lab.ipynb
@@ -652,53 +652,8 @@
     "\n",
     "\n",
     "def hybrid_search(queries: dict[str, str]):\n",
-    "    lexical_results = lexical_search(queries)\n",
-    "    semantic_results = semantic_search(queries)\n",
-    "\n",
-    "    print(lexical_results)\n",
-    "    print(semantic_results)\n",
-    "\n",
-    "    alpha = 0.8\n",
-    "    beta = 0.2\n",
-    "    k_rrf = 60\n",
-    "\n",
-    "    relevance_documents = {}\n",
-    "\n",
-    "    for query in queries.keys():\n",
-    "\n",
-    "        lexical_rank = {}\n",
-    "        semantic_rank = {}\n",
-    "\n",
-    "        for i, (doc_id, _) in enumerate(lexical_results[query]):\n",
-    "            lexical_rank[doc_id] = i + 1\n",
-    "\n",
-    "        for i, (doc_id, _) in enumerate(semantic_results[query]):\n",
-    "            semantic_rank[doc_id] = i + 1\n",
-    "\n",
-    "        all_docs = set(lexical_rank).union(set(semantic_rank))\n",
-    "\n",
-    "        relevance_documents[query] = []\n",
-    "\n",
-    "        for doc_id in all_docs:\n",
-    "            rrf_lex = 0\n",
-    "            rrf_sem = 0\n",
-    "\n",
-    "            if doc_id in lexical_rank:\n",
-    "                rrf_lex = 1 / (k_rrf + lexical_rank[doc_id])\n",
-    "\n",
-    "            if doc_id in semantic_rank:\n",
-    "                rrf_sem = 1 / (k_rrf + semantic_rank[doc_id])\n",
-    "\n",
-    "            score = rrf_lex +  rrf_sem\n",
-    "            relevance_documents[query].append((doc_id, score))\n",
-    "\n",
-    "        relevance_documents[query].sort(key=lambda x: x[1], reverse=True)\n",
-    "        relevance_documents[query] = relevance_documents[query][:10]\n",
-    "\n",
-    "    for doc_id, score in relevance_documents[\"QF1\"]:\n",
-    "        print(f\"DOC_ID={doc_id} SCORE={score}\")\n",
-    "   \n",
-    "    return relevance_documents\n"
+    "    ## TODO: Implementar busca hibrída\n",
+    "    pass\n"
    ]
   },
   {
@@ -729,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +839,7 @@
     "search_functions = [\n",
     "    (\"lexical\", lexical_search),\n",
     "    (\"semantic\", semantic_search),\n",
-    "    (\"hybrid\", hybrid_search),\n",
+    "    # (\"hybrid\", hybrid_search),\n",
     "    # (\"creative\", creative_search)\n",
     "]\n",
     "\n",
@@ -1622,7 +1577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "elastic-lab (3.12.3)",
+   "display_name": "elastic-lab",
    "language": "python",
    "name": "python3"
   },
